ingress/ingress-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-ns
  labels:
    kubernetes.io/metadata.name: ingress-ns
