ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-ns
spec:
  selector:
    app: ingress-nginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
  externalIPs:
  - 158.160.180.26
