ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ingress-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: xn--80aacpzj4agjn.xn--p1ai
    http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            namespace: auth-service
            port:
              number: 8081
      - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                namespace: monitoring
                port:
                  number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-stack-grafana
            namespace: monitoring
            port:
              number: 80
      - path: /dashboard
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-web
            namespace: kubernetes-dashboard
            port:
              number: 8000
